# COMP3004-TeamProject

./: README.md
COMP3004-FinalProject/: CMakeLists.txt  basalschedule.cpp  basalschedule.h  basalschedulemodel.cpp  basalschedulemodel.h  bolus_manager.cpp  bolus_manager.h  cgm_simulator.cpp  cgm_simulator.h  control_iq_manager.cpp  control_iq_manager.h  firstrowhighlightdelegate.cpp  firstrowhighlightdelegate.h  glucose_graph_widget.cpp  glucose_graph_widget.h  history_data.cpp  history_data.h  lock.cpp  lock.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  profile.cpp  profile.h  resources.qrc
Diagrams-Usecases/Sequence-Diagrams(Emergency-Scenarios)/: readme.md
Diagrams-Usecases/State Machine Diagrams/: ReadMe.md
Video-Links/: Use Case 1 & 2 Test Video.txt  Use Case 3 & 5 Videos  UseCase4.txt  Usecase6.txt
build-COMP3004-FinalProject/: CMakeCache.txt  Makefile  cmake_install.cmake
